force-app/main/default/objects/BOM_Header__c/BOM_Header__c.object-meta.xml
<CustomObject>
    <label>BOM Header</label>
    <nameField>
        <displayFormat>BOM-{00000}</displayFormat>
        <label>BOM Header No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>