force-app/main/default/objects/BOM_Header__c/fields/Assembly_Site__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assembly Site</label>
    <referenceTo>Manufacturing_Site__c</referenceTo>
    <relationshipLabel>BOM Headers (Assembly)</relationshipLabel>
    <relationshipName>BOM_Headers_Assembly</relationshipName>
    <type>Lookup</type>
</CustomField>