force-app/main/default/objects/BOM_Header__c/fields/BOM_Number__c.field-meta.xml
<CustomField>
    <fullName>BOM_Number__c</fullName>
    <label>BOM管理番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>