force-app/main/default/objects/BOM_Header__c/fields/BOM_Type__c.field-meta.xml
<CustomField>
    <fullName>BOM_Type__c</fullName>
    <label>BOM種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>設計BOM</fullName>
            </value>
            <value>
                <fullName>製造BOM</fullName>
                <default>true</default>
                <label>製造BOM</label>
            </value>
            <value>
                <fullName>販売BOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>