force-app/main/default/objects/BOM_Header__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>