force-app/main/default/objects/BOM_Header__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <label>有効終了日</label>
    <type>Date</type>
</CustomField>