force-app/main/default/objects/BOM_Header__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>BOM Headers</relationshipLabel>
    <relationshipName>BOM_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>