force-app/main/default/objects/BOM_Header__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>改訂番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>