force-app/main/default/objects/BOM_Header__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>設計中</fullName>
                <default>true</default>
                <label>設計中</label>
            </value>
            <value>
                <fullName>承認済</fullName>
            </value>
            <value>
                <fullName>廃止</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>