force-app/main/default/objects/BOM_Header__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>総原価</label>
    <summarizedField>BOM_Line__c.Extended_Cost__c</summarizedField>
    <summaryForeignKey>BOM_Line__c.BOM_Header__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>